Added edit and delete todo

--- a/ToDoListProject/Pages/ToDoItemComponent.razor
+++ b/ToDoListProject/Pages/ToDoItemComponent.razor
@@ -1,6 +1,17 @@
 ﻿@inherits ComponentBase
 
-<li class="list-group-item">
+<li class="list-group-item" ondragover="event.preventDefault()" @ondrop="OnDropHandler">
+
+    <span class="drag-handle" draggable="true" @ondragstart="@(() => OnStartDragHandler(Item))"><i class="fa-solid fa-grip-vertical"></i></span>
     <input class="form-check-input me-1" type="checkbox" checked="@Item.Completed" @onchange="HandleCheckboxChange" />
-    <label class="form-check-label" style="@GetTextDecorationStyle()">@Item.Description</label>
+
+    @if(_isEditing)
+    {
+        <input class="form-control d-inline w-auto" @bind="Item.Description" @onblur="SaveEdit" @onkeydown="HandleKeyDownToSaveEdit" />
+        <button class="btn btn-danger ms-2" @onclick="DeleteItem">X</button>
+    }
+    else
+    {
+        <label class="form-check-label" style="@GetTextDecorationStyle()" @onclick="EditDescription">@Item.Description</label>
+    }
 </li>
