--- a/ToDoListProject/Layout/MainLayout.razor
+++ b/ToDoListProject/Layout/MainLayout.razor
@@ -7,6 +7,7 @@
     <main>
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         </div>
 
         <article class="content px-4">
