WIP Drag and drop with SortableJS

--- a/ToDoListProject/Pages/ToDoList.razor
+++ b/ToDoListProject/Pages/ToDoList.razor
@@ -22,7 +22,7 @@
     <br />
 
     <ul class="list-group">
-        @foreach (ToDoItem toDoItem in _uncompletedToDoItems)
+        @* @foreach (ToDoItem toDoItem in _uncompletedToDoItems)
         {
             <ToDoItemComponent Item="toDoItem" OnItemChanged="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" @key="toDoItem.Id" />
         }
@@ -30,6 +30,12 @@
         @foreach (ToDoItem toDoItem in _completedToDoItems)
         {
             <ToDoItemComponent Item="toDoItem" OnItemChanged="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" @key="toDoItem.Id" />
-        }
+        } *@
+
+        <SortableList Items="_uncompletedToDoItems" Context="toDo">
+            <SortableItem>
+                <ToDoItemComponent Item="toDo" OnItemChanged="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" />
+            </SortableItem>
+        </SortableList>
     </ul>
 </div>
