--- a/ToDoListProject/Pages/ToDoItemComponent.razor
+++ b/ToDoListProject/Pages/ToDoItemComponent.razor
@@ -1,6 +1,6 @@
 ﻿@inherits ComponentBase
 
-<li class="list-group-item drag-handle">
+<li class="list-group-item">
 
     <span class="drag-handle"><i class="fa-solid fa-grip-vertical"></i></span>
     <input class="form-check-input me-1" type="checkbox" checked="@Item.Completed" @onchange="HandleCheckboxChange" />
