Done drag and drop

--- a/ToDoListProject/Pages/ToDoItemComponent.razor
+++ b/ToDoListProject/Pages/ToDoItemComponent.razor
@@ -2,7 +2,7 @@
 
 <li class="list-group-item">
 
-    <span class="drag-handle"><i class="fa-solid fa-grip-vertical"></i></span>
+    <span class="toDo-drag-handle"><i class="fa-solid fa-grip-vertical"></i></span>
     <input class="form-check-input me-1" type="checkbox" checked="@Item.Completed" @onchange="HandleCheckboxChange" />
 
     @if(_isEditing)
