--- a/ToDoListProject/Pages/ToDoItemComponent.razor
+++ b/ToDoListProject/Pages/ToDoItemComponent.razor
@@ -1,8 +1,11 @@
 ﻿@inherits ComponentBase
 
 <li class="list-group-item">
+    @if(!Item.Completed)
+    {
+        <span class="toDo-drag-handle"><i class="fa-solid fa-grip-vertical"></i></span>
+    }
 
-    <span class="toDo-drag-handle"><i class="fa-solid fa-grip-vertical"></i></span>
     <input class="form-check-input me-1" type="checkbox" checked="@Item.Completed" @onchange="HandleCheckboxChange" />
 
     @if(_isEditing)
