Removed selecting while dragging

--- a/ToDoListProject/Pages/SortableList.razor
+++ b/ToDoListProject/Pages/SortableList.razor
@@ -1,7 +1,7 @@
 ﻿<div id="sortableList">
     @foreach(var item in Items)
     {
-        <div class="toDo-item" @key="item.Id">
+        <div class="toDo-item no-select" @key="item.Id">
             @if(SortableItem != null)
             {
                 @SortableItem(item);
