--- a/ToDoListProject/Layout/NavMenu.razor
+++ b/ToDoListProject/Layout/NavMenu.razor
@@ -15,27 +15,28 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="toDoList">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> To Do List
             </NavLink>
         </div>
+
+        <Dropdown>
+            <DropdownToggle Color="Color.Secondary">
+                Dropdown button
+            </DropdownToggle>
+            <DropdownMenu>
+                <DropdownItem Link="#">Action</DropdownItem>
+                <DropdownItem Link="#">Another action</DropdownItem>
+                <DropdownItem Link="#">Something else here</DropdownItem>
+            </DropdownMenu>
+        </Dropdown>
     </nav>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
-
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private bool show = false;
 
     private void ToggleNavMenu()
     {
