--- a/ToDoListProject/_Imports.razor
+++ b/ToDoListProject/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using ToDoListProject
 @using ToDoListProject.Layout
+@using Blazorise
+@using Blazorise.Bootstrap
+@using Blazorise.Icons.FontAwesome
