--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -1,17 +1,17 @@
-﻿@page "/toDoList/{ListId}"
+﻿@page "/list/{ListId}"
+@inject ToDoService ToDoService
+@inject NavigationManager NavigationManager
 @using ToDoListProject.Models
-@inject ToDoListManager ListManager
-@implements IDisposable
 
-<div >
-    @if (_listModel == null)
+<div>
+    @if (ToDoListModel == null)
     {
         <p>List not found!</p>
     }
     else
     {
         <div class="alert alert-light" role="alert">
-            <h3 class="text-center">@_listModel.ListName</h3>
+            <h3 class="text-center">@ToDoListModel.ListName</h3>
         </div>
 
         <div class="container-fluid">
@@ -30,15 +30,15 @@
         <br />
 
         <ul class="list-group">
-            <SortableList Items="_uncompletedToDoItems" Context="toDo">
-                <SortableItem>
-                    <ToDoItemComponent Item="toDo" OnItemChanged="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" />
-                </SortableItem>
+            <SortableList Items="_uncompletedToDoItems" OnReorder="HandleReorder">
+                <ItemTemplate Context="toDo">
+                    <ToDoItemComponent Item="toDo" OnUpdate="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" />
+                </ItemTemplate>
             </SortableList>
 
             @foreach (ToDoItem toDoItem in _completedToDoItems)
             {
-                <ToDoItemComponent Item="toDoItem" OnItemChanged="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" @key="toDoItem.Id" />
+                <ToDoItemComponent Item="toDoItem" OnUpdate="UpdateItemCompletionStatus" OnDelete="HandleDeleteItem" @key="toDoItem.Id" />
             }
         </ul>
     }
