--- a/ToDoListProject/Pages/ToDoListManager.razor
+++ b/ToDoListProject/Pages/ToDoListManager.razor
@@ -1,7 +1,9 @@
-﻿@page "/lists"
+﻿@page "/"
+@page "/lists"
 @inject ToDoService ToDoService
+@inject NavigationManager NavigationManager
 
-<h1>To-Do Lists</h1>
+@* <h1>To-Do Lists</h1>
 <div class="row">
     <div class="col-md-4">
         <h2>Lists</h2>
@@ -29,4 +31,4 @@
             <div>No list selected</div>
         }
     </div>
-</div>
+</div> *@
