--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -29,6 +29,7 @@
 
         <br />
 
+        //In here also itmes from list with the same ID as ListId
         <ul class="list-group">
             <SortableList Items="_uncompletedToDoItems" OnReorder="HandleReorder">
                 <ItemTemplate Context="toDo">
