--- a/ToDoListProject/Layout/NavMenu.razor.css
+++ b/ToDoListProject/Layout/NavMenu.razor.css
@@ -65,6 +65,13 @@
     color: white;
 }
 
+    .nav-item.mt-auto {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
