--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -10,25 +10,35 @@
     }
     else
     {
-        <div class="alert alert-light text-center" role="alert">
-            @if (_isEditing)
-            {
-                <input class="form-control d-inline w-auto text-center" @bind="_editListName" @onblur="SaveEdit" @onkeydown="HandleKeyDownToSaveEdit" />
-            }
-            else
-            {
-                <h3 @onclick="EditListName">@ToDoListModel.ListName</h3>
-            }
+        <div class="alert alert-light d-flex justify-content-between align-items-center" role="alert">
+            <div>
+                @if (_isEditing)
+                {
+                    <input class="form-control d-inline w-auto" @bind="_editListName" @onblur="SaveEdit" @onkeydown="HandleKeyDownToSaveEdit" />
+                }
+                else
+                {
+                    <h2 class="m-0" @onclick="EditListName">@ToDoListModel.ListName</h2>
+                }
+            </div>
+            <div>
+                <button class="btn p-1 me-2">
+                    <i class="bi fa-solid fa-user-plus fa-lg"></i>
+                </button>
+                <button class="btn p-1">
+                    <i class="bi fa-solid fa-trash fa-lg"></i>
+                </button>
+            </div>
         </div>
 
         <div class="container-fluid">
             <div class="row">
                 <form @onsubmit="AddNewItem" class="input-group">
-                    <div class="col-10 p-0">
-                        <input type="text" class="form-control" placeholder="New item..." @bind="_newToDoItem.Description" />
-                    </div>
-                    <div class="col-2 p-0">
+                    <div class="col-md-auto p-1">
                         <button type="submit" class="btn btn-secondary w-100">Add</button>
+                    </div>
+                    <div class="col p-1">
+                        <input type="text" class="form-control" placeholder="New item..." @bind="_newToDoItem.Description" />
                     </div>
                 </form>
             </div>
