--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -23,10 +23,10 @@
             </div>
             <div>
                 <button class="btn p-1 me-2">
-                    <i class="bi fa-solid fa-user-plus fa-lg"></i>
+                    <i class="fa-solid fa-user-plus fa-lg"></i>
                 </button>
-                <button class="btn p-1">
-                    <i class="bi fa-solid fa-trash fa-lg"></i>
+                <button class="btn p-1" @onclick="ShowDeleteConfirmation">
+                    <i class="fa-solid fa-trash fa-lg"></i>
                 </button>
             </div>
         </div>
@@ -43,6 +43,13 @@
                 </form>
             </div>
         </div>
+
+        <ModalComponent Show="_showDeleteConfirmation"
+                        Title="Delete List"
+                        Content="Are you sure you want to delete this list? This action is irreversible."
+                        OnAccept="AcceptDeleteConfirmation"
+                        OnCancel="HideDeleteConfirmation">
+        </ModalComponent>
 
         <br />
 
