--- a/ToDoListProject/Layout/NavMenu.razor
+++ b/ToDoListProject/Layout/NavMenu.razor
@@ -67,13 +67,13 @@
         ToDoService.ListDeleted += MyObject_ListDeleted;
     }
 
-    private void MyObject_ListNameChanged(object sender, EventArgs e)
+    private void MyObject_ListNameChanged(object sender, (string listId, string newName) e)
     {
-        var list = ToDoService.GetAllLists().FirstOrDefault(l => l.Id.ToString() == sender.ToString());
+        var list = _lists.FirstOrDefault(l => l.Id == e.listId);
 
         if (list != null)
         {
-            list.ListName = sender.ToString();
+            list.ListName = e.newName;
             StateHasChanged();
         }
     }
